# fullstack_langgraph_paperreasearcher_agent_based_deepseek

./: .gitignore  README.md
backend/: pyproject.toml
backend/data/markdown/: RCAgent.md
backend/data/note/: RCAgent_notes.md
backend/data/papers/6a14f0da/: summary.md
backend/data/papers/764c7432/: summary.md
backend/data/papers/7a694f57/: notes.md  summary.md
backend/data/papers/7e1a94b4/: notes.md
backend/data/papers/a00eb478/: notes.md  summary.md
backend/data/summary/: 8ff3ed62.md  RCAgent.md  The_Potential_of_One-Shot_Failure_Root_Cause_Analysis_Collaboration_of_the_Large_Language_Model_and_Small_Classifier (2).md
backend/src/agent/: app.py  configuration.py  graph.py  prompts.py  state.py  tools_and_schemas.py  utils.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatMessagesView.tsx  InputForm.tsx  WelcomeScreen.tsx
frontend/src/components/qa/: NoteActionButton.tsx  NotePromptBar.tsx  QnAComposer.tsx  QnAPanel.tsx
frontend/src/components/reader/: AdaptiveReader.tsx  CollapsiblePanel.tsx  SummaryControlPanel.tsx  SummaryMarkdownView.tsx
frontend/src/components/workspace/: SmartExplorer.tsx  WorkspaceLayout.tsx
gemini-fullstack-langgraph-quickstart/frontend/src/components/qa/: QnAPanel.tsx
